# cvat-dataset-tools

./: .gitignore  README.md  README.template.md  app.py  pyproject.toml
config/: defaults.json
notebooks/: example.md
src/imagestuff/: image_ops.py
src/uploader/: __init__.py  app.py  uploader.py
src/uploader/config/: default_label_config.json
